@@ -27,5 +27,6 @@ src/config.h.in
 src/sndfile-generate-chirp
 src/sndfile-jackplay
 src/sndfile-mix-to-mono
+src/sndfile-resample
 src/sndfile-spectrogram
 src/stamp-h1
